--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.8.14",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-flatpickr-component": "^8.1.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3"
   },
