--- a/package.json
+++ b/package.json
@@ -8,37 +8,40 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap-vue": "^2.0.0-rc.20",
-    "core-js": "^2.6.5",
-    "dayjs": "^1.8.14",
-    "normalize.css": "^8.0.1",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-flatpickr-component": "^8.1.2",
-    "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.3"
+    "@fortawesome/fontawesome-svg-core": "~1.2.18",
+    "@fortawesome/free-solid-svg-icons": "~5.8.2",
+    "@fortawesome/vue-fontawesome": "~0.1.6",
+    "axios": "~0.18.0",
+    "bootstrap-vue": "~2.0.0-rc.20",
+    "core-js": "~2.6.8",
+    "dayjs": "~1.8.14",
+    "normalize.css": "~8.0.1",
+    "vue": "~2.6.10",
+    "vue-class-component": "~7.1.0",
+    "vue-flatpickr-component": "~8.1.2",
+    "vue-property-decorator": "~8.1.1",
+    "vue-router": "~3.0.6"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-typescript": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
-    "@vue/devtools": "^5.1.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "bootstrap": "^4.3.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "mutationobserver-shim": "^0.3.3",
-    "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
-    "portal-vue": "^2.1.4",
-    "sass-loader": "^7.1.0",
-    "typescript": "^3.4.3",
-    "vue-cli-plugin-bootstrap-vue": "^0.4.0",
-    "vue-template-compiler": "^2.5.21"
+    "@babel/polyfill": "~7.4.4",
+    "@vue/cli-plugin-babel": "~3.8.0",
+    "@vue/cli-plugin-eslint": "~3.8.0",
+    "@vue/cli-plugin-typescript": "~3.8.1",
+    "@vue/cli-service": "~3.8.0",
+    "@vue/devtools": "~5.1.0",
+    "@vue/eslint-config-typescript": "~4.0.0",
+    "babel-eslint": "~10.0.1",
+    "bootstrap": "~4.3.1",
+    "eslint": "~5.16.0",
+    "eslint-plugin-vue": "~5.0.0",
+    "mutationobserver-shim": "~0.3.3",
+    "node-sass": "~4.12.0",
+    "popper.js": "~1.15.0",
+    "portal-vue": "~2.1.4",
+    "sass-loader": "~7.1.0",
+    "typescript": "~3.4.3",
+    "vue-cli-plugin-bootstrap-vue": "~0.4.0",
+    "vue-template-compiler": "~2.5.21"
   },
   "eslintConfig": {
     "root": true,
